--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@vercel/blob": "^0.27.0",
+    "mongoose": "^8.14.1",
     "next": "15.1.3",
     "next-video": "^2.0.0",
     "react": "^19.0.0",
